--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Angel</h1>
-    <li class="menu__link"><a href="apellido.html">Busca tu apellido</a></li>
+    <li class="menu__link"><a href="apellido.html">Mi apellido</a></li>
   </body>
 </html>
